--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/govi_link_db?createDatabaseIfNotExist=true</url>
+                    <user>root</user>
+                    <password>Rasha5416/6145</password>
+                    <cleanDisabled>false</cleanDisabled>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
