--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,29 +20,10 @@ spring:
           batch_size: 20
         order_inserts: true
         order_updates: true
+        type:
+          preferred_uuid_jdbc_type: CHAR   # ⭐ ADD THIS LINE
 
   flyway:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
-
-  servlet:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
-
-server:
-  port: 8080
-
-app:
-  upload:
-    dir: ./uploads
-    base-url: http://localhost:8080/uploads
-
-springdoc:
-  api-docs:
-    path: /v3/api-docs
-  swagger-ui:
-    path: /swagger-ui.html
-    operations-sorter: method
-    tags-sorter: alpha
